Отправка запроса на апи дает 403 ошибку, необходимо сделать авторизацию